# Mafshou

./: .env.sample  Mafshou.code-workspace  README.md  docker-compose.dev.yml  docker-compose.yml
core/: .dockerignore  Cargo.toml  Dockerfile
core/adapters/: Cargo.toml
core/application/: Cargo.toml
core/domain/: Cargo.toml
core/infrastructure/: Cargo.toml
core/scripts/: environment_variables.sh
core/src/: main.rs
db/: .gitignore  Dockerfile
db/dashboard/: Dockerfile
db/scripts/: backup-database.sh
extra/: .gitignore
