[workspace]
resolver = "3"
members = ["domain", "application", "adapters", "infrastructure"]

[workspace.package]
version = "0.1.0"
authors = ["Amin Latifkar <amin.latifkar@gmail.com>"]
description = ""
documentation = ""
homepage = "https://github.com/aminlatif/Mafshou"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0" }
argon2 = { version = "0.5" }
async-trait = "0.1.89"
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
thiserror = "2.0"
time = "0.3"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "json"] }
tokio = { version = "1.52", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.7", features = ["trace", "cors"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[package]
name = "mafshou"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
